# Quiz-Practice-Platform

./: .gitignore  Course.cpp  Course.h  Dockerfile  Question.cpp  README  README.md  package-lock.json
QuizData/: Course.cpp  Overview  Question.cpp  Question.h  Quiz.cpp  Quiz.h  Topic.cpp  Topic.h  User.cpp  User.h
quiz-backend/: CMakeLists.txt  pytest.ini
quiz-backend/entry/: main.cpp  main.py
quiz-backend/src/: Course.cpp  Course.h  Course.py  Question.cpp  Question.h  Question.py  Quiz.cpp  Quiz.h  Quiz.py  Topic.cpp  Topic.h  Topic.py  User.cpp  User.h  User.py  app.py  course_test.py  cs222-quiz-proj-firebase-adminsdk-k0qc4-685f7d0bee.json  cs222-quiz-proj-firebase-adminsdk-k0qc4-936c2f1d05.json  fbconfig.json  initialize_data.py  question_test.py  quiz_test.py  topic_test.py  user_test.py
quiz-backend/src/models/: Course.py  Question.py  Quiz.py  Topic.py  User.py
quiz-backend/src/old-cpp/: CMakeLists.txt  Course.cpp  Course.h  Question.cpp  Question.h  Quiz.cpp  Quiz.h  Topic.cpp  User.cpp  User.h
quiz-backend/src/old-cpp /: Topic.h
quiz-backend/tests/: test.cpp
quiz-frontend/: .gitignore  package-lock.json  package.json
quiz-frontend/src/: App.js
quiz-frontend/src/components/Login/: Login.css  Login.js
quiz-frontend/src/components/QuestionPanel/: QuestionPanel.css  QuestionPanel.js
quiz-frontend/src/pages/CoursePage/: CoursePage.css  CoursePage.js
quiz-frontend/src/pages/HomePage/: HomePage.js
quiz-frontend/src/pages/LoginPage/: LoginPage.js
quiz-frontend/static/: styles.css
quiz-frontend/templates/: base.html  index.html  login.html  quiz.html  result.html  select_course.html  select_topics.html  signup.html
